...
                app:layout_constraintBottom_toBottomOf="@+id/add_organizer_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_organizer_image"
                app:layout_constraintTop_toTopOf="@+id/add_organizer_image">

                <EditText
                    android:id="@+id/add_name_organizer_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/add_your_name"
...
                app:layout_constraintEnd_toEndOf="@+id/add_username_text_input_layout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/add_username_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/add_username_text_input_layout">

                <EditText
                    android:id="@+id/add_subject_reunion_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/add_reunion_subject"
                    android:lines="2"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/add_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_icons8_calendar"
                android:contentDescription="@string/filter_button_for_date_description"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/add_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add_date_type"
                android:textSize="14sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_date_btn" />


            <ImageButton
                android:id="@+id/add_hour_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_icons8_time_span"
                android:contentDescription="@string/filter_button_for_time_description"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/add_date_btn"
                app:layout_constraintTop_toBottomOf="@+id/add_filter_line1_design"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/add_hour_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add_hour_type"
                android:textSize="14sp"
...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_hour_btn" />


            <Spinner
                android:id="@+id/add_roomReunion_spinner"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/add_validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ic_check_validate_bleu_24dp"
            android:contentDescription="@string/add_button_description"
...
