<?xml version="1.0" encoding="utf-8"?>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/item_spinner_room_txt"
        style="?attr/spinnerDropDownItemStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:singleLine="true"
        android:text="@string/filter_meeting_room_a"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:backgroundTint="@color/colorAccent"
        android:ellipsize="marquee"
        tools:ignore="PrivateResource" />