<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_filter">

    <TextView
        android:id="@+id/filter_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_action_filter"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#454242"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/filter_date_btn"
        android:layout_width="52dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_icons8_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_title_txt" />

    <TextView
        android:id="@+id/filter_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/filter_select_a_meeting_date"
        android:textColor="@color/text_color_filter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_date_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_date_btn"
        app:layout_constraintTop_toTopOf="@+id/filter_date_btn" />

    <ImageView
        android:id="@+id/filter_line_deco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_icons8_horizontal_line_2"
        android:contentDescription="@string/add_line_deco_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_date_btn" />

    <Spinner
        android:id="@+id/filter_room_spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingRight="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/filter_meetingRoom_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_meetingRoom_image"
        app:layout_constraintTop_toTopOf="@+id/filter_meetingRoom_image"
        tools:ignore="PrivateResource,RtlHardcoded,RtlSymmetry" />

    <ImageButton
        android:id="@+id/filter_validate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_check_validate_bleu_24dp"
        android:contentDescription="@string/filter_button_validate_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/filter_cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/filter_room_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/filter_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_cancel_red_24dp"
        android:contentDescription="@string/filter_button_cancel_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/filter_validate_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_room_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/filter_meetingRoom_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/filter_date_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_line_deco"
        app:srcCompat="@drawable/ic_icons8_open_door_2"
        android:contentDescription="@string/filter_meeting_room_image_description" />

</androidx.constraintlayout.widget.ConstraintLayout>