<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_reunion_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui_reunion_list.ListReunionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/list_reunion_toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:title="@string/app_name"
        app:menu="@menu/menu_main"
        android:elevation="4dp">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_reunion_recycler_view"
        android:name="com.adrianSng.maReu.ui.reunion_list.ReunionFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.reunion_list.ListReunionActivity"
        tools:listitem="@layout/fragment_item_reunion" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_reunion_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>