<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mareu.adriansng.maru.ui_reunion_list.ListReunionActivity">
    <item
        android:id="@+id/action_filter"
        android:title="@string/app_action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>
